<resources>
    <string name="app_name">NaijaHealthCentre</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="lga">lga</string>
    <string name="whatsebola">WHAT IS EBOLA ?</string>

    <string name="meaningebola"> The Ebola virus causes an acute, serious illness which is often fatal if untreated. Ebola virus disease (EVD) first appeared in 1976 in 2 simultaneous outbreaks, one in what is now, Nzara, South Sudan, and the other in Yambuku,
Democratic Republic of Congo.
The latter occurred in a village near the
Ebola River, from which the disease takes its name.</string>
    <string name="transmission">TRANSMISSION</string>
    <string name="transmissiondef">It is thought that fruit bats of the Pteropodidae family are natural Ebola virus hosts.  Ebola is introduced into the human population through close contact with the blood,  secretions, organs or other bodily fluids of infected animals such as chimpanzees, gorillas, fruit bats,   monkeys, forest antelope and porcupines found ill or dead or in the rainforest.  Ebola then spreads through human-to-human transmission via direct contact (through broken skin or mucous membranes)  with the blood, secretions, organs or other bodily fluids of infected people, and with surfaces and materials  (e.g. bedding, clothing) contaminated with these fluids.  Health-care workers have frequently been infected while treating patients with suspected or confirmed EVD.  This has occurred through close contact with patients when infection control precautions are not strictly practiced.  Burial ceremonies in which mourners have direct contact with the body of the deceased person can also play  a role in the transmission of Ebola.  People remain infectious as long as their blood contains the virus.</string>
    <string name="treatment">TREATMENT AND VACCINE</string>
    <string name="treatmentdef">Supportive care-rehydration with oral or intravenous fluids- and treatment of specific symptoms,  improves survival. There is as yet no proven treatment available for EVD. However,   a range of potential treatments including blood products, immune therapies and drug therapies are currently being evaluated.  No licensed vaccines are available yet, but 2 potential vaccines are undergoing human safety testing.</string>
    <string name="prevention">PREVENTION AND CONTROL</string>
    <string name="preventiondef">Good outbreak control relies on applying a package of interventions, namely case management,  surveillance and contact tracing, a good laboratory service, safe burials and social mobilisation.  Community engagement is key to successfully controlling outbreaks. Raising awareness of risk factors for  Ebola infection and protective measures that individuals can take is an effective way to reduce human transmission.  Risk reduction messaging should focus on several factors:  Reducing the risk of wildlife-to-human transmission from contact with infected fruit bats or monkeys/apes and  the consumption of their raw meat. Animals should be handled with gloves and other appropriate protective clothing.  Animal products (blood and meat) should be thoroughly cooked before consumption. Reducing the risk of human-to-human transmission from direct or close contact with people with Ebola symptoms,  particularly with their bodily fluids. Gloves and appropriate personal protective equipment should be worn when   taking care of ill patients at home. Regular hand washing is required after visiting patients in hospital,   as well as after taking care of patients at home.</string>
    <string name="who">WHO RESPONSE</string>
    <string name="whodef">WHO aims to prevent Ebola outbreaks by maintaining surveillance for Ebola virus disease and  supporting at-risk countries to developed preparedness plans. The document provides overall  guidance for control of Ebola and Marburg virus outbreaks</string>
    <string name="whattoknow">WHAT YOU NEED TO KNOW ABOUT EBOLA</string>
    <string name="white">#FFFFFF</string>
    <string name="hivprevention">Tell your sexual partners if you have HIV. Its important to tell anyone with whom youve had sex
that youre HIV-positive. Your partners need to be tested and to receive medical care if they have the virus.
They also need to know their HIV status so that they dont infect others.
Use a clean needle. If you use a needle to inject drugs, make sure its sterile and dont share it.
Take advantage of needle-exchange programs in your community and consider seeking help for your drug use.
If youre pregnant, get medical care right away. If youre HIV-positive, you may pass the infection to your baby.
But if you receive treatment during pregnancy, you can cut your babys risk significantly.</string>

    <string name="meaninghiv">HIV is a virus that gradually attacks the immune system,
 which is our body’s natural defence against illness. If a person becomes infected with HIV,
 they will find it harder to fight off infections and diseases. The virus destroys a type of white blood cell
 called a T-helper cell and makes copies of itself inside them. T-helper cells are also referred to as CD4 cells.
</string>
    <string name="hivtreatment">
HIV is treated using a combination of medicines to fight HIV infection. This is called antiretroviral therapy (ART). ART isn’t a cure, but it can control the virus so that you can live a longer, healthier life and reduce the risk of transmitting HIV to others.
ART involves taking a combination of HIV medicines (called an HIV regimen) every day, exactly as prescribed.
These HIV medicines prevent HIV from multiplying (making copies of itself), which reduces the amount of HIV in your body. Having less HIV in your body gives your immune system a chance to recover and fight off infections and cancers. Even though there is still some HIV in the body, the immune system is strong enough to fight off infections and cancers.
By reducing the amount of HIV in your body, HIV medicines also reduce the risk of transmitting the virus to others.
ART is recommended for all people with HIV, regardless of how long they’ve had the virus or how healthy they are. If left
 untreated, HIV will attack the immune system and eventually progress to AIDS.</string>
    <string name="hivresponse">
The initial global response to HIV focussed on prevention through behaviour change and research into a vaccine. However, it became clear that knowledge of transmission was not enough to stop the epidemic.

In the mid-2000s, the global response accelerated rapidly with universal access to treatment becoming a major priority. Recently, there have been calls to intensify global efforts with the UNAIDS Fast Track Strategy aiming to end the epidemic by 2030.</string>




    <string name="hivtranmissiondef">


Sexual intercourse  Anal and vaginal intercourse are high risk activities.
In the penis vagina and anus HIV may enter through cuts and sores many of which would be very small
and hard to notice or directly through the mucus membranes.

Oral sex  There are cases where HIV was transmitted orally,
so its not completely without risk to have HIV-infected semen, vaginal fluid or blood in your mouth.
However oral sex is considered a low risk practice. The virus cant survive well in the mouth ,
so the risk of HIV transmission through the throat, gums, and oral membranes is
 lower than through vaginal or anal membranes.

Sharing injection needles or works: Sharing needles or other materials used for injecting is considered a
high-risk practice. Injection needles can pass blood directly from one person to another if you share them. I
f a person with HIV injects with a needle then shares it with another person, the second person is at very
high risk for getting HIV.
</string>

            <string name="tuber">Tuberculosis  is a potentially serious infectious disease that mainly affects your lungs.
The bacteria that cause tuberculosis are spread from one person to another through tiny droplets
released into the air via coughs and sneezes.

Once rare in developed countries, tuberculosis infections began increasing in 1985, partly because
of the emergence of HIV, the virus that causes AIDS. HIV weakens a persons immune system so it cant fight the TB germs.
In the United States, because of stronger control programs, tuberculosis began to decrease again in 1993,
but remains a concern.</string>
    <string name="tubertransmision">
When people with TB in their lungs or throat cough, laugh, sneeze, sing, or even talk, the germs that cause TB may be spread into the air.
        If another person breathes in these germs there is a chance that they will become infected.

It is not easy to become infected with TB.  Usually a person has to be close to someone with tuberculosis disease for a long period of time.

Even if someone becomes infected with TB, that does not mean they will get active TB disease.</string>
         <string name="tubertreatmtn">
Medications are the cornerstone of tuberculosis treatment. But treating TB takes much longer than treating other
             types of bacterial infections.

With tuberculosis, you must take antibiotics for at least six to nine months. The exact drugs and length of
             treatment depend on your age, overall health, possible drug resistance, the form of TB  and the infections
             location in the body.

Recent research suggests that a shorter term of treatment  four months instead of nine  with combined medication
             may be effective in keeping latent TB from becoming active TB. With the shorter course of treatment,
             people are more likely to take all their medication, and the risk of side effects is lessened. Studies are ongoing.
</string>
    <string name="tuberprevention">The TB vaccine called Bacillus Calmette-Guerin  was first developed in the 1920s.
It is one of the most widely used of all current vaccines, and it reaches more than 80%
of all new born children and infants in countries where it is part of the national childhood immunization
programme.1 However, it is also one of the most variable vaccines in routine use.

The BCG vaccine has been shown to provide children with excellent protection against the disseminated forms
of TB, however protection against pulmonary TB in adults is variable. Since most transmission originates from
adult cases of pulmonary TB, the BCG vaccine is generally used to protect children, rather than to interrupt
transmission amongst adults.

The BCG vaccine will often result in the person vaccinated having a positive result to a TB skin test.</string>
    <string name="whatHiv">WHAT IS HIV</string>
    <string name="whattoknowHIV">WHAT DO YOU KNOW ABOUT HIV</string>
    <string name="whatstuber">WHAT DO YOU KNOW ABOUT TUBERCULOSIS</string>
    <string name="whattoknowabout">WHAT DO YOU KNOW ABOUT TUBERCULOSIS</string>
    <string name="whatstube">WHAT IS TUBERCULOSIS</string>
    <string name="hello_world">hello world</string>
    <string name="ebolatip">EBOLA TIPS</string>
    <string name="hospitaltips">HOSPITAL NEARBY</string>
    <string name="hivtips">HIV TIPS</string>
    <string name="tubertips">TUBERCULOSIS TIPS</string>
</resources>
