<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mainrel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/HivImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"

            android:src="@drawable/ebola"
            android:text="@string/ebolatip" />

        <Button
            android:id="@+id/HospiraImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/HivImage"
            android:layout_weight="1"
            android:src="@drawable/hospital"
            android:text="@string/hospitaltips" />

        <Button
            android:id="@+id/ebbolaHiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/HospiraImage"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/ebola"
            android:text="@string/hivtips" />

        <Button
            android:id="@+id/tuberculosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ebbolaHiv"
            android:layout_weight="1"
            android:src="@drawable/hospital"
            android:text="@string/tubertips" />

    </RelativeLayout>

</RelativeLayout>

