<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mainRel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/what_you_need"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/green"
            android:text="@string/whattoknowHIV" />

        <TextView
            android:id="@+id/whatsebola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/what_you_need"
            android:layout_marginTop="10dp"
            android:background="@color/green"
            android:text="@string/whatHiv" />

        <TextView
            android:id="@+id/eboladef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/whatsebola"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/whatsebola" />

        <TextView
            android:id="@+id/transmission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eboladef"
            android:layout_marginTop="10dp"
            android:background="@color/green"
            android:text="@string/transmission" />

        <TextView
            android:id="@+id/transmissiondef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transmission"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/transmission" />

        <TextView
            android:id="@+id/treatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transmissiondef"
            android:layout_marginTop="10dp"
            android:background="@color/green"
            android:text="@string/treatment" />

        <TextView
            android:id="@+id/treatmentdef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/treatment"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/treatment" />

        <TextView
            android:id="@+id/prevention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/treatmentdef"
            android:layout_marginTop="10dp"
            android:background="@color/green"
            android:text="@string/prevention" />

        <TextView
            android:id="@+id/preventiondef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prevention"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/prevention" />

        <TextView
            android:id="@+id/who"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/preventiondef"
            android:layout_marginTop="10dp"
            android:background="@color/green"
            android:text="@string/who" />

        <TextView
            android:id="@+id/whodef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/who"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/who" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/whodef">

            <VideoView
                android:id="@+id/videoView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>


    </RelativeLayout>


</ScrollView>