<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/tuberId_layout"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mainRel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/what_you_need_layout_tuber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:background="@color/purple">

            <TextView
                android:id="@+id/what_you_need"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/whattoknowabout" />

        </RelativeLayout>


        <!--<TextView
            android:id="@+id/what_you_need"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/purple"
            android:text="@string/whattoknowabout" />-->

        <TextView
            android:id="@+id/whatsebola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/what_you_need_layout_tuber"
            android:layout_marginTop="10dp"
            android:background="@color/purple2"
            android:text="@string/whatstube" />

        <TextView
            android:id="@+id/eboladef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/whatsebola"
            android:layout_marginTop="10dp"
            android:text="@string/whatsebola" />

        <TextView
            android:id="@+id/transmission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eboladef"
            android:layout_marginTop="10dp"
            android:background="@color/purple2"
            android:text="@string/transmission" />

        <TextView
            android:id="@+id/transmissiondef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transmission"
            android:layout_marginTop="10dp"
            android:text="@string/transmission" />

        <TextView
            android:id="@+id/treatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transmissiondef"
            android:layout_marginTop="10dp"
            android:background="@color/purple2"
            android:text="@string/treatment" />

        <TextView
            android:id="@+id/treatmentdef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/treatment"
            android:layout_marginTop="10dp"
            android:text="@string/treatment" />

        <TextView
            android:id="@+id/prevention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/treatmentdef"
            android:layout_marginTop="10dp"
            android:background="@color/purple2"
            android:text="@string/prevention" />

        <TextView
            android:id="@+id/preventiondef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prevention"
            android:layout_marginTop="10dp"
            android:text="@string/prevention" />

        <TextView
            android:id="@+id/who"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/preventiondef"
            android:layout_marginTop="10dp"
            android:background="@color/purple2"
            android:text="@string/who"
            android:visibility="gone" />

        <TextView
            android:id="@+id/whodef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/who"
            android:layout_marginTop="10dp"
            android:text="@string/who"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/whodef">

            <VideoView
                android:id="@+id/videoView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>


    </RelativeLayout>


</ScrollView>